Go examples refactored